--- a/index.html
+++ b/index.html
@@ -1,81 +1,93 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Malla Química y Farmacia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Malla Química y Farmacia Compacta</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #fff0f5;
       margin: 0;
-      padding: 20px;
+      padding: 10px;
       color: #333;
+      overflow-x: hidden;
     }
-
     h1 {
       text-align: center;
       color: #8a2be2;
+      margin-bottom: 20px;
     }
 
-    .year {
-      margin-bottom: 30px;
+    #malla {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      max-height: 90vh;
+      overflow-y: auto;
+      padding: 0 10px;
     }
 
-    .semester {
-      padding: 15px;
+    .anio {
+      display: flex;
+      gap: 15px;
       border: 2px solid #dda0dd;
       border-radius: 12px;
-      margin-bottom: 15px;
-      background: #ffe4f3;
-    }
-
-    .semester h3 {
-      margin-top: 0;
-      color: #c71585;
-    }
-
-    .course {
       padding: 10px;
-      margin: 5px 0;
-      border-radius: 8px;
-      background-color: #fbeaff;
-      cursor: pointer;
-      transition: 0.3s;
+      background: #ffe4f3;
+      min-width: 100%;
+      box-sizing: border-box;
+      overflow-x: auto;
+    }
+
+    .semestre {
+      flex: 1 1 0;
+      background: #fbeaff;
+      border-radius: 10px;
+      padding: 10px;
+      min-width: 180px;
+      max-height: 70vh;
+      overflow-y: auto;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+
+    .semestre h3 {
+      margin-top: 0;
+      margin-bottom: 10px;
+      color: #c71585;
+      font-size: 1.1em;
+      text-align: center;
+    }
+
+    .curso {
+      background-color: #fcd6e0;
       border: 1px solid #e4c3f3;
+      border-radius: 8px;
+      padding: 8px 10px;
+      margin-bottom: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      user-select: none;
+      font-size: 0.9em;
     }
 
-    .course:hover {
-      background-color: #f3d5f7;
+    .curso:hover:not(.bloqueado) {
+      background-color: #fbb6c5;
     }
 
-    .completed {
+    .curso.completado {
       text-decoration: line-through;
       background-color: #d8bfd8 !important;
-      color: #888;
+      color: #666;
     }
 
-    .locked {
+    .curso.bloqueado {
       opacity: 0.5;
       pointer-events: none;
-    }
-
-    .course[data-tooltip]:hover::after {
-      content: attr(data-tooltip);
-      position: absolute;
-      background: #fff0f5;
-      border: 1px solid #dda0dd;
-      padding: 4px 8px;
-      border-radius: 6px;
-      font-size: 12px;
-      top: 100%;
-      left: 0;
-      z-index: 10;
-      white-space: nowrap;
     }
   </style>
 </head>
 <body>
-  <h1>Malla Química y Farmacia</h1>
+  <h1>Malla Química y Farmacia Compacta</h1>
   <div id="malla"></div>
 
   <script>
@@ -210,55 +222,28 @@
       }
     ];
 
-    const approved = new Set();
+    const aprobados = new Set();
 
-    const render = () => {
-      const container = document.getElementById('malla');
-      container.innerHTML = '';
-      malla.forEach(year => {
-        const yearDiv = document.createElement('div');
-        yearDiv.className = 'year';
-        year.semestres.forEach(sem => {
-          const semDiv = document.createElement('div');
-          semDiv.className = 'semester';
-          const title = document.createElement('h3');
-          title.textContent = sem.nombre;
-          semDiv.appendChild(title);
+    function puedeTomar(curso) {
+      if (!curso.req) return true;
+      return curso.req.every(r => aprobados.has(r));
+    }
 
-          sem.cursos.forEach(curso => {
-            const cDiv = document.createElement('div');
-            cDiv.className = 'course';
-            cDiv.textContent = curso.nombre;
+    function renderMalla() {
+      const contenedor = document.getElementById('malla');
+      contenedor.innerHTML = '';
 
-            if (curso.req) {
-              cDiv.setAttribute('data-tooltip', 'Requiere: ' + curso.req.join(', '));
-              const locked = curso.req.some(r => !approved.has(r));
-              if (locked) cDiv.classList.add('locked');
-            }
+      malla.forEach(anio => {
+        const divAnio = document.createElement('div');
+        divAnio.className = 'anio';
 
-            if (approved.has(curso.nombre)) {
-              cDiv.classList.add('completed');
-            }
+        anio.semestres.forEach(semestre => {
+          const divSem = document.createElement('div');
+          divSem.className = 'semestre';
 
-            cDiv.addEventListener('click', () => {
-              if (approved.has(curso.nombre)) {
-                approved.delete(curso.nombre);
-              } else {
-                approved.add(curso.nombre);
-              }
-              render();
-            });
+          const titulo = document.createElement('h3');
+          titulo.textContent = `${semestre.nombre} - Año ${anio.anio}`;
+          divSem.appendChild(titulo);
 
-            semDiv.appendChild(cDiv);
-          });
-
-          yearDiv.appendChild(semDiv);
-        });
-        container.appendChild(yearDiv);
-      });
-    };
-
-    render();
-  </script>
-</body>
-</html>
+          semestre.cursos.forEach(curso => {
+            const divCurso = document.createElement('d
