--- a/index.html
+++ b/index.html
@@ -2,224 +2,196 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Malla Química y Farmacia Compacta</title>
+  <title>Malla Química y Farmacia - Vista Semestral</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #fff0f5;
       margin: 0;
       padding: 10px;
-      color: #333;
-      overflow-x: hidden;
+      color: #4b0082;
     }
     h1 {
       text-align: center;
       color: #8a2be2;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
-
-    #malla {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      max-height: 90vh;
-      overflow-y: auto;
-      padding: 0 10px;
-    }
-
-    .anio {
-      display: flex;
-      gap: 15px;
-      border: 2px solid #dda0dd;
-      border-radius: 12px;
-      padding: 10px;
-      background: #ffe4f3;
-      min-width: 100%;
-      box-sizing: border-box;
+    .malla-container {
       overflow-x: auto;
+      max-width: 100vw;
+      padding-bottom: 15px;
     }
-
-    .semestre {
-      flex: 1 1 0;
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      min-width: 900px;
+      table-layout: fixed;
+    }
+    th, td {
+      border: 2px solid #d8bfd8;
+      padding: 8px 10px;
+      vertical-align: top;
       background: #fbeaff;
-      border-radius: 10px;
-      padding: 10px;
-      min-width: 180px;
-      max-height: 70vh;
-      overflow-y: auto;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      color: #4b0082;
     }
-
-    .semestre h3 {
-      margin-top: 0;
-      margin-bottom: 10px;
-      color: #c71585;
+    th {
+      background-color: #dda0dd;
+      font-weight: 700;
       font-size: 1.1em;
       text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 2;
     }
-
+    td {
+      max-height: 75vh;
+      overflow-y: auto;
+    }
     .curso {
-      background-color: #fcd6e0;
-      border: 1px solid #e4c3f3;
-      border-radius: 8px;
-      padding: 8px 10px;
+      background-color: #f3e5f5;
       margin-bottom: 6px;
+      padding: 6px 8px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s ease;
       user-select: none;
       font-size: 0.9em;
+      line-height: 1.2em;
     }
-
     .curso:hover:not(.bloqueado) {
-      background-color: #fbb6c5;
+      background-color: #e1bee7;
     }
-
     .curso.completado {
       text-decoration: line-through;
-      background-color: #d8bfd8 !important;
+      background-color: #cbb3d9 !important;
       color: #666;
     }
-
     .curso.bloqueado {
-      opacity: 0.5;
+      opacity: 0.4;
       pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <h1>Malla Química y Farmacia Compacta</h1>
-  <div id="malla"></div>
+  <h1>Malla Química y Farmacia - Vista Semestral</h1>
+  <div class="malla-container">
+    <table id="malla-table">
+      <thead>
+        <tr id="header-row">
+          <!-- Aquí van los semestres -->
+        </tr>
+      </thead>
+      <tbody id="body-table">
+        <!-- Aquí van los cursos -->
+      </tbody>
+    </table>
+  </div>
 
   <script>
-    const malla = [
+    const semestres = [
       {
-        anio: 1,
-        semestres: [
-          {
-            nombre: "Semestre 1",
-            cursos: [
-              { nombre: "Matemáticas I" },
-              { nombre: "Química General I" },
-              { nombre: "Biología Celular" },
-              { nombre: "Introducción a la Farmacia" },
-              { nombre: "Inglés I" },
-            ]
-          },
-          {
-            nombre: "Semestre 2",
-            cursos: [
-              { nombre: "Matemáticas II", req: ["Matemáticas I"] },
-              { nombre: "Química General II", req: ["Química General I"] },
-              { nombre: "Morfología", req: ["Biología Celular"] },
-              { nombre: "Sello I", req: ["Introducción a la Farmacia"] },
-              { nombre: "Inglés II", req: ["Inglés I"] },
-            ]
-          }
+        nombre: "Semestre 1",
+        cursos: [
+          { nombre: "Matemáticas I" },
+          { nombre: "Química General I" },
+          { nombre: "Biología Celular" },
+          { nombre: "Introducción a la Farmacia" },
+          { nombre: "Inglés I" },
         ]
       },
       {
-        anio: 2,
-        semestres: [
-          {
-            nombre: "Semestre 3",
-            cursos: [
-              { nombre: "Físico Química I", req: ["Matemáticas II", "Química General II"] },
-              { nombre: "Fisiología", req: ["Morfología"] },
-              { nombre: "Química Orgánica I", req: ["Química General II"] },
-              { nombre: "Bioestadística", req: ["Matemáticas II"] },
-              { nombre: "Sello II", req: ["Sello I"] },
-              { nombre: "Inglés III", req: ["Inglés II"] },
-            ]
-          },
-          {
-            nombre: "Semestre 4",
-            cursos: [
-              { nombre: "Físico Química II", req: ["Físico Química I"] },
-              { nombre: "Química Orgánica II", req: ["Química Orgánica I"] },
-              { nombre: "Química Analítica", req: ["Química General II"] },
-              { nombre: "Fisiopatología", req: ["Fisiología"] },
-              { nombre: "Inglés IV", req: ["Inglés III"] },
-            ]
-          }
+        nombre: "Semestre 2",
+        cursos: [
+          { nombre: "Matemáticas II", req: ["Matemáticas I"] },
+          { nombre: "Química General II", req: ["Química General I"] },
+          { nombre: "Morfología", req: ["Biología Celular"] },
+          { nombre: "Sello I", req: ["Introducción a la Farmacia"] },
+          { nombre: "Inglés II", req: ["Inglés I"] },
         ]
       },
       {
-        anio: 3,
-        semestres: [
-          {
-            nombre: "Semestre 5",
-            cursos: [
-              { nombre: "Bioquímica", req: ["Química Orgánica II", "Físico Química II"] },
-              { nombre: "Farmacodinamia", req: ["Fisiopatología"] },
-              { nombre: "Botánica y Fitoterapia", req: ["Química Orgánica II"] },
-              { nombre: "Economía", req: ["Bioestadística"] },
-              { nombre: "Sello III", req: ["Sello II"] },
-              { nombre: "Análisis Instrumental", req: ["Química Analítica"] },
-            ]
-          },
-          {
-            nombre: "Semestre 6",
-            cursos: [
-              { nombre: "Farmacoquímica I", req: ["Química Orgánica II", "Farmacodinamia"] },
-              { nombre: "Microbiología e Inmunología", req: ["Bioquímica"] },
-              { nombre: "Bioquímica Clínica", req: ["Fisiopatología", "Bioquímica"] },
-              { nombre: "Farmacología I", req: ["Farmacodinamia"] },
-              { nombre: "Gestión Farmacéutica", req: ["Economía"] },
-              { nombre: "Legislación Farmacéutica", req: ["Química Orgánica II", "Química Analítica", "Fisiopatología"] },
-            ]
-          }
+        nombre: "Semestre 3",
+        cursos: [
+          { nombre: "Físico Química I", req: ["Matemáticas II", "Química General II"] },
+          { nombre: "Fisiología", req: ["Morfología"] },
+          { nombre: "Química Orgánica I", req: ["Química General II"] },
+          { nombre: "Bioestadística", req: ["Matemáticas II"] },
+          { nombre: "Sello II", req: ["Sello I"] },
+          { nombre: "Inglés III", req: ["Inglés II"] },
         ]
       },
       {
-        anio: 4,
-        semestres: [
-          {
-            nombre: "Semestre 7",
-            cursos: [
-              { nombre: "Toxicología", req: ["Fisiopatología", "Farmacodinamia"] },
-              { nombre: "Salud Pública", req: ["Microbiología e Inmunología", "Economía"] },
-              { nombre: "Farmacoquímica II", req: ["Farmacoquímica I"] },
-              { nombre: "Farmacología II", req: ["Farmacología I"] },
-              { nombre: "Biofarmacia y Farmacocinética", req: ["Farmacología I"] },
-              { nombre: "Ética", req: ["Legislación Farmacéutica", "Gestión Farmacéutica"] },
-            ]
-          },
-          {
-            nombre: "Semestre 8",
-            cursos: [
-              { nombre: "Tecnología Farmacéutica I", req: ["Biofarmacia y Farmacocinética"] },
-              { nombre: "Electivo II", req: ["Ética"] },
-              { nombre: "Farmacia Asistencial", req: ["Salud Pública"] },
-              { nombre: "Nutrición", req: ["Biofarmacia y Farmacocinética"] },
-              { nombre: "Química de Alimentos", req: ["Farmacología II"] },
-              { nombre: "Electivo I", req: ["Farmacoquímica I", "Microbiología e Inmunología", "Farmacología I", "Bioquímica Clínica", "Legislación Farmacéutica", "Gestión Farmacéutica"] },
-            ]
-          }
+        nombre: "Semestre 4",
+        cursos: [
+          { nombre: "Físico Química II", req: ["Físico Química I"] },
+          { nombre: "Química Orgánica II", req: ["Química Orgánica I"] },
+          { nombre: "Química Analítica", req: ["Química General II"] },
+          { nombre: "Fisiopatología", req: ["Fisiología"] },
+          { nombre: "Inglés IV", req: ["Inglés III"] },
         ]
       },
       {
-        anio: 5,
-        semestres: [
-          {
-            nombre: "Semestre 9",
-            cursos: [
-              { nombre: "Tecnología Farmacéutica II", req: ["Tecnología Farmacéutica I"] },
-              { nombre: "Tecnología Cosmética", req: ["Tecnología Farmacéutica I"] },
-              { nombre: "Unidad de Investigación", req: ["Nutrición", "Electivo I", "Electivo II", "Química de Alimentos", "Tecnología Farmacéutica I", "Toxicología"] },
-              { nombre: "Farmacia Clínica", req: ["Electivo II", "Farmacología II"] },
-              { nombre: "Electivo III", req: ["Electivo I"] },
-            ]
-          },
-          {
-            nombre: "Semestre 10",
-            cursos: [
-              { nombre: "Internado en Farmacia Clínica", req: ["Farmacia Clínica", "Unidad de Investigación", "Tecnología Farmacéutica II", "Tecnología Cosmética"] },
-              { nombre: "Práctica Prolongada", req: ["Tecnología Farmacéutica II", "Tecnología Cosmética", "Unidad de Investigación", "Farmacia Clínica"] },
-              { nombre: "Práctica Obligatoria en Farmacia Comunitaria", req: ["Electivo I", "Química de Alimentos", "Electivo II", "Nutrición", "Tecnología Farmacéutica I"] },
-            ]
-          }
+        nombre: "Semestre 5",
+        cursos: [
+          { nombre: "Bioquímica", req: ["Química Orgánica II", "Físico Química II"] },
+          { nombre: "Farmacodinamia", req: ["Fisiopatología"] },
+          { nombre: "Botánica y Fitoterapia", req: ["Química Orgánica II"] },
+          { nombre: "Economía", req: ["Bioestadística"] },
+          { nombre: "Sello III", req: ["Sello II"] },
+          { nombre: "Análisis Instrumental", req: ["Química Analítica"] },
         ]
-      }
+      },
+      {
+        nombre: "Semestre 6",
+        cursos: [
+          { nombre: "Farmacoquímica I", req: ["Química Orgánica II", "Farmacodinamia"] },
+          { nombre: "Microbiología e Inmunología", req: ["Bioquímica"] },
+          { nombre: "Bioquímica Clínica", req: ["Fisiopatología", "Bioquímica"] },
+          { nombre: "Farmacología I", req: ["Farmacodinamia"] },
+          { nombre: "Gestión Farmacéutica", req: ["Economía"] },
+          { nombre: "Legislación Farmacéutica", req: ["Química Orgánica II", "Química Analítica", "Fisiopatología"] },
+        ]
+      },
+      {
+        nombre: "Semestre 7",
+        cursos: [
+          { nombre: "Toxicología", req: ["Fisiopatología", "Farmacodinamia"] },
+          { nombre: "Salud Pública", req: ["Microbiología e Inmunología", "Economía"] },
+          { nombre: "Farmacoquímica II", req: ["Farmacoquímica I"] },
+          { nombre: "Farmacología II", req: ["Farmacología I"] },
+          { nombre: "Biofarmacia y Farmacocinética", req: ["Farmacología I"] },
+          { nombre: "Ética", req: ["Legislación Farmacéutica", "Gestión Farmacéutica"] },
+        ]
+      },
+      {
+        nombre: "Semestre 8",
+        cursos: [
+          { nombre: "Tecnología Farmacéutica I", req: ["Biofarmacia y Farmacocinética"] },
+          { nombre: "Electivo II", req: ["Ética"] },
+          { nombre: "Farmacia Asistencial", req: ["Salud Pública"] },
+          { nombre: "Nutrición", req: ["Biofarmacia y Farmacocinética"] },
+          { nombre: "Química de Alimentos", req: ["Farmacología II"] },
+          { nombre: "Electivo I", req: ["Farmacoquímica I", "Microbiología e Inmunología", "Farmacología I", "Bioquímica Clínica", "Legislación Farmacéutica", "Gestión Farmacéutica"] },
+        ]
+      },
+      {
+        nombre: "Semestre 9",
+        cursos: [
+          { nombre: "Tecnología Farmacéutica II", req: ["Tecnología Farmacéutica I"] },
+          { nombre: "Tecnología Cosmética", req: ["Tecnología Farmacéutica I"] },
+          { nombre: "Unidad de Investigación", req: ["Nutrición", "Electivo I", "Electivo II", "Química de Alimentos", "Tecnología Farmacéutica I", "Toxicología"] },
+          { nombre: "Farmacia Clínica", req: ["Electivo II", "Farmacología II"] },
+          { nombre: "Electivo III", req: ["Electivo I"] },
+        ]
+      },
+      {
+        nombre: "Semestre 10",
+        cursos: [
+          { nombre: "Internado en Farmacia Clínica", req: ["Farmacia Clínica", "Unidad de Investigación", "Tecnología Farmacéutica II", "Tecnología Cosmética"] },
+          { nombre: "Práctica Prolongada", req: ["Tecnología Farmacéutica II", "Tecnología Cosmética", "Unidad de Investigación", "Farmacia Clínica"] },
+          { nombre: "Práctica Obligatoria en Farmacia Comunitaria", req: ["Electivo I", "Química de Alimentos", "Electivo II", "Nutrición", "Tecnología Farmacéutica I"] },
+        ]
+      },
     ];
 
     const aprobados = new Set();
@@ -229,34 +201,38 @@
       return curso.req.every(r => aprobados.has(r));
     }
 
-    function renderMalla() {
-      const contenedor = document.getElementById('malla');
-      contenedor.innerHTML = '';
+    function render() {
+      const headerRow = document.getElementById('header-row');
+      const bodyTable = document.getElementById('body-table');
 
-      malla.forEach(anio => {
-        const divAnio = document.createElement('div');
-        divAnio.className = 'anio';
+      // Limpia tabla
+      headerRow.innerHTML = '';
+      bodyTable.innerHTML = '';
 
-        anio.semestres.forEach(semestre => {
-          const divSem = document.createElement('div');
-          divSem.className = 'semestre';
+      // 1. Header: Nombres semestres
+      semestres.forEach(sem => {
+        const th = document.createElement('th');
+        th.textContent = sem.nombre;
+        headerRow.appendChild(th);
+      });
 
-          const titulo = document.createElement('h3');
-          titulo.textContent = `${semestre.nombre} - Año ${anio.anio}`;
-          divSem.appendChild(titulo);
+      // 2. Encuentra el máximo número de cursos en un semestre
+      const maxCursos = Math.max(...semestres.map(s => s.cursos.length));
 
-          semestre.cursos.forEach(curso => {
+      // 3. Construye filas con cursos por semestre
+      for (let i = 0; i < maxCursos; i++) {
+        const tr = document.createElement('tr');
+        semestres.forEach(sem => {
+          const td = document.createElement('td');
+
+          if (sem.cursos[i]) {
+            const curso = sem.cursos[i];
             const divCurso = document.createElement('div');
             divCurso.className = 'curso';
             divCurso.textContent = curso.nombre;
 
-            if (!puedeTomar(curso)) {
-              divCurso.classList.add('bloqueado');
-            }
-
-            if (aprobados.has(curso.nombre)) {
-              divCurso.classList.add('completado');
-            }
+            if (!puedeTomar(curso)) divCurso.classList.add('bloqueado');
+            if (aprobados.has(curso.nombre)) divCurso.classList.add('completado');
 
             divCurso.onclick = () => {
               if (aprobados.has(curso.nombre)) {
@@ -264,20 +240,20 @@
               } else if (puedeTomar(curso)) {
                 aprobados.add(curso.nombre);
               }
-              renderMalla();
+              render();
             };
 
-            divSem.appendChild(divCurso);
-          });
+            td.appendChild(divCurso);
+          }
 
-          divAnio.appendChild(divSem);
+          tr.appendChild(td);
         });
 
-        contenedor.appendChild(divAnio);
-      });
+        bodyTable.appendChild(tr);
+      }
     }
 
-    renderMalla();
+    render();
   </script>
 </body>
 </html>
