--- a/index.html
+++ b/index.html
@@ -4,65 +4,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Malla Química y Farmacia</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fff0f5;
-      margin: 0;
-      padding: 10px;
-      color: #4b0082;
-    }
-    h1 {
-      text-align: center;
-      color: #8a2be2;
-      margin-bottom: 15px;
-    }
-    .malla-container {
-      overflow-x: auto;
-      max-width: 100vw;
-      padding-bottom: 15px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      min-width: 900px;
-      table-layout: fixed;
-    }
-    th, td {
-      border: 2px solid #d8bfd8;
-      padding: 8px 10px;
-      vertical-align: top;
-      background: #fbeaff;
-      color: #4b0082;
-    }
-    th {
-      background-color: #dda0dd;
-      font-weight: 700;
-      font-size: 1.1em;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 2;
-    }
-    td {
-      max-height: 75vh;
-      overflow-y: auto;
-    }
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #fff0f5;
+  margin: 0;
+  padding: 10px;
+  color: #4b0082;
+}
+
+/* Título */
+h1 {
+  text-align: center;
+  color: #8a2be2;
+  margin-bottom: 15px;
+}
+
+/* Contenedor con scroll horizontal */
+.malla-container {
+  overflow-x: auto;
+  max-width: 100vw;
+  padding-bottom: 15px;
+}
+
+/* Tabla */
+table {
+  border-collapse: separate;
+  border-spacing: 16px 24px;
+  width: 100%;
+  min-width: 900px;
+  table-layout: fixed;
+}
+
+/* Headers de semestre */
+th {
+  background: linear-gradient(135deg, #d9b3ff, #bb86fc);
+  font-weight: 700;
+  font-size: 1.2em;
+  text-align: center;
+  color: #3a0066;
+  border-radius: 20px;
+  padding: 16px 12px;
+  box-shadow: 0 4px 8px rgba(155, 89, 182, 0.25);
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+/* Celdas de los cursos */
+td {
+  background: #f6e6fb;
+  border-radius: 20px;
+  vertical-align: top;
+  max-height: 75vh;
+  overflow-y: auto;
+  padding: 16px 12px;
+  box-shadow: 0 3px 6px rgba(155, 89, 182, 0.15);
+}
+
+/* Curso individual */
 .curso {
   background-color: #f3e5f5;
-  margin-bottom: 6px;
-  padding: 8px 12px;
-  border-radius: 12px;
+  margin-bottom: 8px;
+  padding: 10px 16px;
+  border-radius: 18px;
   cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
   user-select: none;
-  font-size: 0.9em;
+  font-size: 0.95em;
   line-height: 1.3em;
   color: #4b0082;
-  border: 1.5px solid #ce93d8;
+  border: 1.8px solid #ce93d8;
+  box-shadow: 0 2px 5px rgba(155, 89, 182, 0.1);
 }
 
 .curso:hover:not(.bloqueado):not(.completado) {
   background-color: #d8b4e2;
+  box-shadow: 0 4px 10px rgba(155, 89, 182, 0.3);
 }
 
 .curso.completado {
@@ -70,11 +87,19 @@
   color: #fff;
   border-color: #5a2e6a;
   text-decoration: line-through;
+  box-shadow: 0 4px 12px rgba(95, 41, 126, 0.6);
 }
 
 .curso.completado:hover {
   background-color: #9350b8;
   border-color: #7b4397;
+  box-shadow: 0 6px 16px rgba(130, 58, 173, 0.8);
+}
+
+.curso.bloqueado {
+  opacity: 0.4;
+  pointer-events: none;
+  box-shadow: none;
 }
   </style>
 </head>
