--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ td {
   </style>
 </head>
 <body>
-  <h1>Malla Química y Farmacia - Vista Semestral</h1>
+  <h1>Malla Química y Farmacia</h1>
   <div class="malla-container">
     <table id="malla-table">
       <thead>
