--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@ td {
   pointer-events: none;
   box-shadow: none;
 }
+    @media (max-width: 768px) {
+  .semestre {
+    min-width: 140px;
+    padding: 0.5rem;
+  }
+
+  .curso {
+    font-size: 0.8rem;
+    padding: 0.4rem;
+  }
+
+  h1 {
+    font-size: 1.1rem;
+  }
+}
   </style>
 </head>
 <body>
