--- a/index.html
+++ b/index.html
@@ -103,17 +103,21 @@ td {
 }
     @media (max-width: 768px) {
   .semestre {
-    min-width: 140px;
-    padding: 0.5rem;
+    min-width: 100px;
+    padding: 0.3rem;
   }
 
   .curso {
-    font-size: 0.8rem;
-    padding: 0.4rem;
+    font-size: 0.65rem;
+    padding: 0.3rem;
+    word-wrap: break-word;
+    white-space: normal;
+    text-align: center;
   }
 
   h1 {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    text-align: center;
   }
 }
   </style>
