--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ td {
 </head>
 <body>
   <h1>Malla Química y Farmacia</h1>
-  <div class="malla-container">
-    <table id="malla-table" class="container">
+  <div class="malla-container container">
+  <table id="malla-table">
       <thead>
         <tr id="header-row">
           <!-- Aquí van los semestres -->
