--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ table {
 
 /* Headers de semestre */
 th {
-  background: linear-gradient(135deg, #d9b3ff, #bb86fc);
+  background: linear-gradient(135deg, #f9cee7, #f7b1c9);
   font-weight: 700;
   font-size: 1.2em;
   text-align: center;
-  color: #3a0066;
+  color: #9b3d5a;
   border-radius: 20px;
   padding: 16px 12px;
   box-shadow: 0 4px 8px rgba(155, 89, 182, 0.25);
