--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ td {
 
 /* Curso individual */
 .curso {
-  background-color: #f3e5f5;
+  background-color: #fbd6e2;
   margin-bottom: 8px;
   padding: 10px 16px;
   border-radius: 18px;
@@ -72,8 +72,8 @@ td {
   user-select: none;
   font-size: 0.95em;
   line-height: 1.3em;
-  color: #4b0082;
-  border: 1.8px solid #ce93d8;
+  color: #b45375;
+  border: 1.8px solid #f9a8c9;
   box-shadow: 0 2px 5px rgba(155, 89, 182, 0.1);
 }
 
