--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@ td {
 }
 
 .curso:hover:not(.bloqueado):not(.completado) {
-  background-color: #d8b4e2;
+  background-color: #f9a8c9;
   box-shadow: 0 4px 10px rgba(155, 89, 182, 0.3);
 }
 
 .curso.completado {
-  background-color: #7b4397; /* morado pastel intenso */
+  background-color: #f57fb0; /* morado pastel intenso */
   color: #fff;
-  border-color: #5a2e6a;
+  border-color: #d94f82;
   text-decoration: line-through;
   box-shadow: 0 4px 12px rgba(95, 41, 126, 0.6);
 }
