--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ td {
 }
 
 .curso.completado:hover {
-  background-color: #9350b8;
-  border-color: #7b4397;
+  background-color: #F66889;
+  border-color: #FF8CAF;
   box-shadow: 0 6px 16px rgba(130, 58, 173, 0.8);
 }
 
