--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Malla Química y Farmacia</title>
+  <title>Malla Química y Farmacia para mi novia, Mariana</title>
   <style>
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -146,7 +146,7 @@ td {
   </style>
 </head>
 <body>
-  <h1>Malla Química y Farmacia</h1>
+  <h1>Malla Química y Farmacia para mi novia, Mariana</h1>
   <div class="malla-container container">
   <table id="malla-table">
       <thead>
